# cuda_something

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
include/: cuda_error_utils.hpp  device.hpp  operation.hpp  tensor.hpp
scripts/: docker_setup.sh  first_time.sh  install_container_toolkit.sh  install_cutensor.sh  install_gtest.sh  setup.sh  test_and_build.sh
src/: device.cpp  kernel.cu  list_devs.cu  operation.cpp  tensor.cpp
test/: test_devices.cu  test_tensors.cu
